RESOLVED FIXED216278
[LFC][IFC] Line should not know about floats
https://bugs.webkit.org/show_bug.cgi?id=216278
Summary [LFC][IFC] Line should not know about floats
alan
Reported 2020-09-08 11:33:49 PDT
(floats are not part of the line, they constrain the line instead)
Attachments
Patch (7.51 KB, patch)
2020-09-08 11:36 PDT, alan
no flags
alan
Comment 1 2020-09-08 11:36:14 PDT
EWS
Comment 2 2020-09-09 08:16:24 PDT
Committed r266781: <https://trac.webkit.org/changeset/266781> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408246 [details].
Radar WebKit Bug Importer
Comment 3 2020-09-09 08:17:17 PDT
Note You need to log in before you can comment on or make changes to this bug.