[LFC][IFC] Line should not know about floats https://bugs.webkit.org/show_bug.cgi?id=216278

Reviewed by Antti Koivisto.

Floats are not part of the line (they only constrain the horizontal space).

* layout/inlineformatting/InlineLine.h:
(WebCore::Layout::Line::setHasIntrusiveFloat): Deleted.
(WebCore::Layout::Line::hasIntrusiveFloat const): Deleted.
* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::layoutInlineContent):
(WebCore::Layout::LineBuilder::initialize):
(WebCore::Layout::LineBuilder::close):
(WebCore::Layout::LineBuilder::commitFloats):
(WebCore::Layout::LineBuilder::handleFloatsAndInlineContent):
* layout/inlineformatting/InlineLineBuilder.h:


Canonical link: https://commits.webkit.org/229145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266781 268f45cc-cd09-0410-ab3c-d52691b4dbfc